        * [ADDED]: #3136 Added "--master-config" command line option to have a settings file (regular SQLiteStudio config file) that all running SQLiteStudio instances import settings from. More details in manual on wiki page.
        * [CHANGE]: #3135 Re-enabled possibility to close database list panel (and reopen it from the View menu entry).
        * [CHANGE]: #2901 Automatically generated database name includes full file name, except for the file extension only (unlike before, when it took only a file name up to the first dot).
        * [CHANGE]: #3140 The "generate name automatically" checkbox has been removed. Now the name is generated automatically by default, unless user starts to edit the name manually.
        * [BUGFIX]: #3118 #3124 #2943 Fixed double precision numbers formatting.
        * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
        * [BUGFIX]: #3126 #3092 Fixed problem with database versions in Android plugin.
        * [BUGFIX]: #3155 Fixed crash when confiriming custom FK value with Enter key.
        * [BUGFIX]: #3094 #3095 Fixed default FK value preselection when tabbing through cells.
        * [BUGFIX]: #3154 Fixed crash when mass replacing token to another token containing initial token.
        * [BUGFIX]: Fixed query generation for "UPDATE" and "DELETE" when invoking it from Database List context menu for the table.
        * [BUGFIX]: Fixed Ctrl+click (Cmd+click on MacOSX) handling of object names that require name wrapping (such as names with spaces in it).
        * [BUGFIX]: #3133 Fixed resolving tables with unusual (like cyrillic) characters in their names.
        * [BUGFIX]: #3096 Restored data editing by Return key hit, that got broken in 3.1.0 for MacOSX.
        * [BUGFIX]: #3122 Several tweaks to Android shell mode connection.
        * [BUGFIX]: #3093 Fixed memory leak in Android plugin.
        * [BUGFIX]: #3132 Fixed column resolving in a View that uses same alias for two different columns.